[B]Version 1.0[/B]
- First version 1
[B]Version 1.0.3[/B]
- bbc link for outsiders
[B]Version 1.0.3[/B]
- external call support
[B]Version 1.0.5[/B]
- added j0anita's link
[B]Version 1.0.10[/B]
- new links
[B]Version 1.0.11[/B]
- more links and some images
[B]Version 1.0.12[/B]
- added recorded streams
[B]Version 1.0.13[/B]
- couple of links fixed
[B]Version 1.0.14[/B]
- couple of links fixed
[B]Version 1.0.15[/B]
- making easier for livestream call
[B]Version 1.0.16[/B]
- added nested manifest example