@@ -21,7 +21,7 @@
   </extension>
 </addon>
 
-<addon id="plugin.video.f4mTester" version="1.0.16" name="f4mTester" provider-name="Shani">
+<addon id="plugin.video.f4mTester" version="1.0.17" name="f4mTester" provider-name="Shani">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.video.F4mProxy" version="1.0.16"/>
