@@ -20,3 +20,5 @@
 - making easier for livestream call
 [B]Version 1.0.16[/B]
 - added nested manifest example
+[B]Version 1.0.17[/B]
+- removed import of t0mm0 common, wasn't even being used
